<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">





        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/your_wifi_is_off"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/please_turn_the_wifi_on_and_continue"
                        android:gravity="center"
                        android:textSize="17sp"/>
                    <Button
                        android:id="@+id/yesBtn"
                        android:layout_width="100dp"
                        android:layout_height="42dp"
                        android:layout_marginVertical="10dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textColor="@color/white"
                        android:textSize="18sp" />



    </LinearLayout>

</androidx.cardview.widget.CardView>



