<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".view.page.main.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@mipmap/mosque" />

    <EditText
        android:id="@+id/username"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_above="@id/password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/usernameHint"
        android:inputType="textEmailAddress"
        android:maxLength="11"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_above="@id/depository_code"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="12dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/depository_code"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_above="@id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/depository_code"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ir.nilva.abotorab.view.widget.UnoSubmitButton
        android:id="@+id/submit"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spinKit"
        style="@style/SpinKitView.CubeGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:visibility="invisible"
        app:SpinKit_Color="@color/gray" />




    <!--    <LinearLayout-->
    <!--            android:id="@+id/ipLayout"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_alignParentBottom="true"-->
    <!--            android:orientation="vertical"-->
    <!--            android:gravity="center_horizontal">-->
    <!--        <LinearLayout-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content">-->

    <!--&lt;!&ndash;            <TextView&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:id="@+id/connectedServerId"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_width="match_parent"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:gravity="center"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:textColor="@color/white"&ndash;&gt;-->
    <!--&lt;!&ndash;                    android:text="اتصال به سرور"/>&ndash;&gt;-->
    <!--        </LinearLayout>-->

    <!--        <LinearLayout-->
    <!--                android:gravity="center"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:orientation="horizontal"-->
    <!--                android:layout_height="wrap_content">-->
    <!--            <TextView-->
    <!--                    android:id="@+id/ip"-->
    <!--                    android:layout_width="wrap_content"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:gravity="center"-->
    <!--                    android:padding="12dp"-->
    <!--                    android:text="تنظیم دستی"-->
    <!--                    android:textColor="@color/white"-->
    <!--                    android:textSize="16sp" />-->

    <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="|"
             android:textColor="@color/white"
             android:textSize="16sp" />


     <TextView
             android:id="@+id/automaticIp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="12dp"
             android:text="اتصال خودکار"
             android:textColor="@color/white"
             android:textSize="16sp" />-->

    <!--        </LinearLayout>-->



    <!--    </LinearLayout>-->



</RelativeLayout>
